[project]
name = "coverage-pytest"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.3",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",  #  pydocstyle
    "COM",  # flake8-commas
    "ISC001",  # Implicit string concatenation - conflicts with formatter
    "SIM108",  # Use ternary operator instead of `if`-`else`-block
]

[tool.ruff.lint.per-file-ignores]
"test_rules.py" = [
    "S101",  # Use of `assert` detected
    "ANN",  # flake8-annotations
    "F401",  # unused-import
]
